@@ -19,6 +19,7 @@
  */
 package org.kse.crypto.keypair;
 
+import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Set;
@@ -67,9 +68,10 @@ public enum KeyPairType {
     /**
      * List of all SLH-DSA key pair types ordered by their OIDs (.3.20 to .3.31)
      */
-    public static final List<KeyPairType> SLHDSA_TYPES_SET = List.of(SLHDSA_SHA2_128S, SLHDSA_SHA2_128F,
-            SLHDSA_SHA2_192S, SLHDSA_SHA2_192F, SLHDSA_SHA2_256S, SLHDSA_SHA2_256F, SLHDSA_SHAKE_128S,
-            SLHDSA_SHAKE_128F, SLHDSA_SHAKE_192S, SLHDSA_SHAKE_192F, SLHDSA_SHAKE_256S, SLHDSA_SHAKE_256F);
+    public static final List<KeyPairType> SLHDSA_TYPES_SET =
+            Arrays.asList(SLHDSA_SHA2_128S, SLHDSA_SHA2_128F, SLHDSA_SHA2_192S, SLHDSA_SHA2_192F, SLHDSA_SHA2_256S,
+                          SLHDSA_SHA2_256F, SLHDSA_SHAKE_128S, SLHDSA_SHAKE_128F, SLHDSA_SHAKE_192S, SLHDSA_SHAKE_192F,
+                          SLHDSA_SHAKE_256S, SLHDSA_SHAKE_256F);
 
     private final String jce;
     private final String oid;
